--- a/Changelog
+++ b/Changelog
@@ -1,2 +1,2 @@
 v1.1: Added feature that coverts ogg vorbis files to mp3
-v1.3 Added zip file making, fixed error if files lacked id3 data 
+v1.3: Added zip file making, fixed error if files lacked id3 data 
